# Desafio-Final-AVANT

./: README.md
Gancho/gancho_pkg/gancho_pkg/: gancho.py  tester.py
drone_vision/: package.xml  setup.py
drone_vision/drone_vision/: line_detector.py
drone_vision/launch/: vision.launch.py
gancho_pkg/: setup.py
gancho_pkg/gancho_pkg/: gancho.py
gancho_pkg_tester/: package.xml  setup.cfg  setup.py
gancho_pkg_tester/gancho_pkg_tester/: gancho.py
navg_pkg/install/: local_setup.sh  setup.sh
navg_pkg/install/drone_navigation/lib/drone_navigation/: navigator
navg_pkg/install/drone_navigation/share/drone_navigation/: package.dsv  package.ps1  package.sh  package.xml
navg_pkg/install/drone_navigation/share/drone_navigation/launch/: mission_launch.py
navg_pkg/log/: latest_build
navg_pkg/src/drone_navigation/: package.xml  setup.py
navg_pkg/src/drone_navigation/drone_navigation/: navigator.py
navg_pkg/src/drone_navigation/launch/: mission_launch.py  solution.launch.py
navg_pkg/src/drone_navigation/test/: mavros_services_dummy.py  mock_feeder.py
